# smart_library

./: .gitmodules  README.md  config.ini  config.py  package-lock.json  package.json  pyproject.toml
app/: app.py  file_reader.py  streamlit.py
app/chroma_db/: chroma.sqlite3
app/common/CRUD/: add_booksCrud.py  author_crud.py  book_crud.py  user_crud.py
app/common/database/: database.py  models.py  vectorstore.py
app/frontend/: README.md  package-lock.json  package.json
app/frontend/src/: App.css  App.js  App.tsx  index.js
app/frontend/src/components/AdminPanel/: AdminPanel.jsx  AdminPanel.module.css  AdminPanel.tsx  BooksTable.jsx  BooksTable.tsx  UsersList.jsx  UsersList.module.css  UsersList.tsx
app/frontend/src/components/AdminPanel /: AdminPanel.jsx  AdminPanel.module.css  BooksTable.jsx  BooksTable.module.css  Header.module.css  UsersList.jsx  UsersList.module.css
app/frontend/src/components/BookCard/: BookCard.jsx  BookCard.module.css  BookCard.tsx
app/frontend/src/components/Button/: ChatbotButton.jsx  ChatbotButton.module.css  ChatbotButton.tsx  DropdownButton.jsx  DropdownButton.module.css  DropdownButton.tsx  HeartIcon.jsx  HeartIcon.module.css  HeartIcon.tsx  LoginDropdown.jsx  LoginDropdown.module.css  LoginDropdown.tsx  likeIcon.jsx  likeIcon.tsx
app/frontend/src/services/: BookService.js  BookService.tsx
app/middleware/: auth.py  logger.py
app/routes/: authors.py  books.py  users.py
app/schemas/: author.py  book.py  user.py
app/services/: chatbot.py  langgraph.py  llm.py  prompt.py
html-frontend/: page.html  script.js  styles.css
(+16 files in other folders)
