[tool.poetry]
name = "smart-bookstore"
version = "0.1.0"
description = ""
authors = ["Saleh <slxw191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
pytest = "^8.2.2"
httpx = "^0.27.0"
langchain-chroma = "^0.1.2"
openai = "^1.36.1"
pandas = "^2.2.2"
psycopg2 = "^2.9.9"
sentence-transformers = "^3.0.1"
langchain-community = "^0.2.9"
chromadb = "^0.5.4"
pydantic = "^2.8.2"
torch = "^2.4.0"
streamlit = "^1.37.0"
sse-starlette = "^2.1.2"
bs4 = "^0.0.2"
langchain-ollama = "^0.1.0"
langchain-core = "^0.2.24"
transformers = "^4.43.3"
langgraph = "^0.1.16"
fastapi-cors = "^0.0.6"
alembic = "^1.13.2"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

